Refactor interface Login and Index

--- a/FlusBankWeb/Views/Access/LogOut.cshtml
+++ b/FlusBankWeb/Views/Access/LogOut.cshtml
@@ -1,8 +1,5 @@
-﻿@if (Session["User"] != null)
-{
-    <ul class="nav navbar-nav navbar-right">
-        <li>
-            @Html.ActionLink("Cerrar Sesión", "Login", "Access")
-        </li>
-    </ul>
-}
+﻿<ul class="nav navbar-nav navbar-right">
+    <li>
+        @Html.ActionLink("Cerrar Sesión", "Login", "Access")
+    </li>
+</ul>
