--- a/FlusBankWeb/Views/Shared/_Layout.cshtml
+++ b/FlusBankWeb/Views/Shared/_Layout.cshtml
@@ -17,18 +17,31 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a class = "navbar-brand" href="@Url.Action("Index", "Home")"><img style="height:2.5rem!important" src="~/Content/logo_small.png"/></a>
+                <a class="navbar-brand" href="@Url.Action("Index", "Home")"><img style="height:2.5rem!important" src="~/Content/logo_small.png" /></a>
             </div>
-            <div class="navbar-collapse collapse">
-                <ul class="nav navbar-nav white">
-                    <li>@Html.ActionLink("Inicio", "Index", "Home")</li>
-                    <li>@Html.ActionLink("Usuarios", "Index", "Users")</li>
-                    <li>@Html.ActionLink("Cuentas bancarias", "Index", "BankAccount")</li>
-                    <li>@Html.ActionLink("Operaciones bancarias", "Index", "BanksOperation")</li>
-                    <li>@Html.ActionLink("Movimientos", "Index", "Transactions")</li>
-                </ul>
-                @Html.Partial("../Access/LogOut")
-            </div>
+            @if (Session["User"] != null)
+            {
+                if (Session["Rol"].ToString().Equals("1"))
+                {
+                    <div class="navbar-collapse collapse">
+                        <ul class="nav navbar-nav white">
+                            <li>@Html.ActionLink("Inicio", "Index", "Home")</li>
+                            <li>@Html.ActionLink("Usuarios", "Index", "Users")</li>
+                            <li>@Html.ActionLink("Cuentas bancarias", "Index", "BankAccount")</li>
+                            <li>@Html.ActionLink("Operaciones bancarias", "Index", "BanksOperation")</li>
+                            <li>@Html.ActionLink("Movimientos", "Index", "Transactions")</li>
+                        </ul>
+                        @Html.Partial("../Access/LogOut")
+                    </div>
+                }
+                else
+                {
+                    <div class="navbar-collapse collapse">
+                        @Html.Partial("../Access/LogOut")
+                    </div>
+                }
+            }
+
         </div>
     </div>
     <div class="container body-content">
