--- a/FlusBankWeb/Views/Transactions/Index.cshtml
+++ b/FlusBankWeb/Views/Transactions/Index.cshtml
@@ -52,7 +52,7 @@
                             @Html.DisplayFor(modelItem => item.Date)
                         </td>
                         <td>
-                            @Html.ActionLink("Detalles", "Details", new { id = item.Id })
+                            @Html.ActionLink("Consultar", "Details", new { id = item.Id })
                     </tr>
                 }
             </tbody>
